# Key-point--annotation-tool

./: .gitignore  README.md  cursorrules  main.py  package.json  pyproject.toml  run_django.py  run_react.py  run_tests.sh  test_api_integration.py  test_complete_workflow.py  test_yolo_integration.py
Document/: Api_documentation.md  DATABASE_SCHEMA.md  Project_documentation.txt  TECHNICAL_ARCHITECTURE.md
Features_from_other_project_use_it_with_cautious/: Keypoint_implementtation.txt
Frontend-ts/: debug-auth.html  index.html  package.json  vite.config.ts  vitest.config.ts
Frontend-ts/src/: App.tsx  index.css
Frontend-ts/src/components/: AuthDebugger.tsx  ForgotPassword.tsx  LandingPage.tsx  Login.tsx  Logout.tsx  PrivateRoute.tsx  Register.tsx  ResetPassword.tsx  Unauthorized.tsx  VerifierDashboard.tsx
Frontend-ts/src/config/: api.ts
Frontend-ts/src/contexts/: AuthContext.tsx
backend/: .coverage  create_test_user.py  pyproject.toml  pytest.ini  requirements.txt  test_complete_password_reset.py  test_email.py  test_password_reset_complete.py
backend/analytics/: models.py
backend/annotations/: models.py
backend/backend/: admin.py  models.py  routing.py  settings.py  urls.py  views.py
backend/core/: models.py
backend/images/: admin.py  consumers.py  models.py  tasks.py  urls.py  views.py  yolo_processor.py
backend/ml_models/: models.py
backend/tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_integration.py  test_models.py
backend/user_auth/: admin.py  models.py  urls.py  views.py
backend/verifications/: models.py
(+36 files in other folders)
