[project]
name = "updated-kpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django>=5.2.3",
    "django-cors-headers>=4.3.1",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.8.0",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.155",
]
